--- a/TP1/WestWorldWithMessaging/WestWorldWithMessaging.vcxproj
+++ b/TP1/WestWorldWithMessaging/WestWorldWithMessaging.vcxproj
@@ -125,6 +125,8 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Swain.cpp" />
+    <ClCompile Include="SwainOwnedStates.cpp" />
     <ClCompile Include="BaseGameEntity.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -163,6 +165,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Swain.h" />
+    <ClInclude Include="SwainOwnedStated.h" />
     <ClInclude Include="BaseGameEntity.h" />
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="EntityNames.h" />
@@ -182,6 +186,10 @@
     <ClInclude Include="..\..\Common\2D\SVector2D.h" />
     <ClInclude Include="..\..\Common\utils.h" />
     <ClInclude Include="..\..\Common\misc\utils.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="WestWorldWithMessaging.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
