--- a/TP1/WestWorldWithMessaging/WestWorldWithMessaging.vcxproj.filters
+++ b/TP1/WestWorldWithMessaging/WestWorldWithMessaging.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="..\..\Common\Time\CrudeTimer.cpp">
       <Filter>misc</Filter>
     </ClCompile>
+    <ClCompile Include="Swain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SwainOwnedStates.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGameEntity.h">
@@ -104,5 +110,19 @@
     <ClInclude Include="..\..\Common\misc\utils.h">
       <Filter>misc</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Swain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SwainOwnedStated.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="WestWorldWithMessaging.rc">
+      <Filter>Source Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
