BarFly classes added

--- a/TP1/WestWorldWithMessaging/WestWorldWithMessaging.vcxproj.filters
+++ b/TP1/WestWorldWithMessaging/WestWorldWithMessaging.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="..\..\Common\Time\CrudeTimer.cpp">
       <Filter>misc</Filter>
     </ClCompile>
+    <ClCompile Include="BarFly.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BarFlyOwnedStates.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGameEntity.h">
@@ -103,6 +109,12 @@
     </ClInclude>
     <ClInclude Include="..\..\Common\misc\utils.h">
       <Filter>misc</Filter>
+    </ClInclude>
+    <ClInclude Include="BarFly.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarFlyOwnedStates.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
