ajout des classes VehicelChaser et VehicleLeader

--- a/TP2/Steering.vcxproj
+++ b/TP2/Steering.vcxproj
@@ -186,6 +186,8 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="VehicleChaser.cpp" />
+    <ClCompile Include="VehicleLeader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGameEntity.h" />
@@ -213,6 +215,8 @@
     <ClInclude Include="..\Common\2D\Vector2D.h" />
     <ClInclude Include="..\Common\2D\Wall2D.h" />
     <ClInclude Include="..\Common\misc\WindowUtils.h" />
+    <ClInclude Include="VehicleChaser.h" />
+    <ClInclude Include="VehicleLeader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="params.ini" />
