--- a/TP3/Raven.vcxproj
+++ b/TP3/Raven.vcxproj
@@ -207,7 +207,8 @@
     <Link>
       <OutputFile>.\Release/Raven.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <IgnoreSpecificDefaultLibraries>libcmt;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries>
+      </IgnoreSpecificDefaultLibraries>
       <ProgramDatabaseFile>.\Release/Raven.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
