--- a/TP3/Raven.vcxproj.filters
+++ b/TP3/Raven.vcxproj.filters
@@ -271,6 +271,9 @@
     <ClCompile Include="goals\Goal_DodgeEdge.cpp">
       <Filter>AI\goals\atomic</Filter>
     </ClCompile>
+    <ClCompile Include="goals\Goal_DodgePath.cpp">
+      <Filter>AI\goals\composite</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Raven_Bot.h">
@@ -611,6 +614,9 @@
     </ClInclude>
     <ClInclude Include="goals\Goal_DodgeEdge.h">
       <Filter>AI\goals\atomic</Filter>
+    </ClInclude>
+    <ClInclude Include="goals\Goal_DodgePath.h">
+      <Filter>AI\goals\composite</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
