--- a/TP3/Raven.vcxproj.filters
+++ b/TP3/Raven.vcxproj.filters
@@ -268,6 +268,7 @@
     <ClCompile Include="..\Common\misc\WindowUtils.cpp">
       <Filter>Common</Filter>
     </ClCompile>
+    <ClCompile Include="MultilayerPerceptron.cc" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Raven_Bot.h">
@@ -606,6 +607,7 @@
     <ClInclude Include="..\Common\misc\WindowUtils.h">
       <Filter>Common</Filter>
     </ClInclude>
+    <ClInclude Include="MultilayerPerceptron.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Params.lua">
