--- a/TP3/Raven.vcxproj
+++ b/TP3/Raven.vcxproj
@@ -225,6 +225,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="armory\Projectile_Grenade.cpp" />
+    <ClCompile Include="armory\Weapon_Blade.cpp" />
     <ClCompile Include="armory\Weapon_Grenade.cpp" />
     <ClCompile Include="goals\GetWeaponCacheGoal_Evaluator.cpp" />
     <ClCompile Include="goals\Goal_DodgeEdge.cpp" />
@@ -548,6 +549,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="armory\Projectile_Grenade.h" />
+    <ClInclude Include="armory\Weapon_Blade.h" />
     <ClInclude Include="armory\Weapon_Blaster.h" />
     <ClInclude Include="armory\Weapon_Grenade.h" />
     <ClInclude Include="goals\GetWeaponCacheGoal_Evaluator.h" />
