--- a/TP3/Raven.vcxproj
+++ b/TP3/Raven.vcxproj
@@ -224,6 +224,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="armory\Projectile_Blade_Strike.cpp" />
     <ClCompile Include="armory\Projectile_Grenade.cpp" />
     <ClCompile Include="armory\Weapon_Blade.cpp" />
     <ClCompile Include="armory\Weapon_Grenade.cpp" />
@@ -548,6 +549,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="armory\Projectile_Blade_Strike.h" />
     <ClInclude Include="armory\Projectile_Grenade.h" />
     <ClInclude Include="armory\Weapon_Blade.h" />
     <ClInclude Include="armory\Weapon_Blaster.h" />
